--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@ document.querySelectorAll('.project-box').forEach(box => {
     </div>
     <div class="home-img">
       
-      <img src="/portfolio/image/about.jpg" alt="" />
+      <img src="/image/about.jpg" alt="" />
     </div>
   </section>
   <!-- about section design -->
   <section class="about" id="about">
     <div class="about-img">
     
-      <img src="/portfolio/image/about 1.jpg" alt="" />
+      <img src="/image/about 1.jpg" alt="" />
     </div>
     <div class="about-content">
       <h2 class="heading">About <span>Me</span></h2>
@@ -267,7 +267,7 @@ document.querySelectorAll('.project-box').forEach(box => {
       <a href="https://wine-shop-taupe.vercel.app/" target="_blank">
     <div class="project-box">
         <div class="project-img">
-            <img src="/portfolio/image/wine img.png" alt="Wine App">
+            <img src="/image/wine img.png" alt="Wine App">
         </div>
         <div class="project-title">
             <h3>Create a Wine App</h3>
@@ -361,78 +361,78 @@ document.querySelectorAll('.project-box').forEach(box => {
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cit.jpg" alt="">
+        <img src="/image/cit.jpg" alt="">
         <h3>(CIT) Participation Certificate by internshipstudio</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/c.jpg" alt="">
+        <img src="/image/c.jpg" alt="">
         <h3>C Certificate by SSI Didital <br>Academy</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cpp.jpg" alt="">
+        <img src="/image/cpp.jpg" alt="">
         <h3>C++ Certificate by SSI Didital Academy</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/python 1.png" alt="">
+        <img src="/image/python 1.png" alt="">
         <h3>Python I by Code ninjas</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/python 2.png" alt="">
+        <img src="/image/python 2.png" alt="">
         <h3>Python II by Code ninjas</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/html.png" alt="">
+        <img src="/image/html.png" alt="">
         <h3>HTML5 by Code ninjas</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/css.png" alt="">
+        <img src="/image/css.png" alt="">
         <h3>CSS by Code ninjas</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/basic react.png" alt="">
+        <img src="/image/basic react.png" alt="">
         <h3>React by Code ninjas</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/react nativ.png" alt="">
+        <img src="/image/react nativ.png" alt="">
         <h3>React Native by Code ninjas</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cloude 2.png" alt="">
+        <img src="/image/cloude 2.png" alt="">
         <h3>Describe cloud computing</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cloude 3.png" alt="">
+        <img src="/image/cloude 3.png" alt="">
         <h3>Describe cloud services types</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cloude .png" alt="">
+        <img src="/image/cloude .png" alt="">
         <h3>Describe cloud services</h3>
       </div>
 
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/cloude 4.png" alt="">
+        <img src="/image/cloude 4.png" alt="">
         <h3>Fundamental AI concepts</h3>
       </div>
       <div class="achivement-box">
         <i class='bx bxs-trophy'></i><br>
-        <img src="/portfolio/image/hackerrank.png" alt="">
+        <img src="/image/hackerrank.png" alt="">
         <h3>CSS by HackerRank</h3>
       </div>
   </section>
