--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ document.querySelectorAll('.project-box').forEach(box => {
         
         <a href="https://www.instagram.com/subhash_dangi23/?igsh=aGtybzJoOWZocjBv"><i class="bx bxl-instagram"></i></a>
       </div>
-      <a href="/portfolio/files/ressume.pdf" class="btn" download>Download Resume</a>
+      <a href="/files/ressume.pdf" class="btn" download>Download Resume</a>
       
 
     </div>
